<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="24dp"
    android:paddingTop="24dp"
    android:paddingEnd="24dp"
    android:paddingBottom="32dp">

    <LinearLayout
        android:id="@+id/layoutCollapsed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textCollapsedTitle"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCollapsedPlayPause"
            style="@style/Widget.MyMusicPlayer.MiniPlayerAction"
            android:layout_width="@dimen/size_mini_player_action"
            android:layout_height="@dimen/size_mini_player_action"
            android:contentDescription="@string/play"
            app:icon="@drawable/ic_play_arrow"
            app:iconSize="@dimen/icon_size_compact" />
    </LinearLayout>

    <TextView
        android:id="@+id/textPlaybackSource"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textColor="@color/app_text_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="My Wave" />

    <ImageView
        android:id="@+id/imageAlbumCover"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginTop="28dp"
        android:adjustViewBounds="true"
        android:background="@drawable/bg_player_cover"
        android:elevation="2dp"
        android:padding="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textPlaybackSource"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/layoutExpanded"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageAlbumCover">

        <TextView
            android:id="@+id/textExpandedTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/mini_player_idle"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            tools:text="Track Title" />

        <TextView
            android:id="@+id/textExpandedArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/no_artist"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="@color/app_text_secondary"
            tools:text="Artist Name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonAddToPlaylist"
                style="@style/Widget.MyMusicPlayer.PlayerActionButton"
                android:layout_width="@dimen/size_player_action_button"
                android:layout_height="@dimen/size_player_action_button"
                android:contentDescription="@string/action_add_to_playlist"
                app:icon="@drawable/ic_playlist_add"
                app:iconSize="@dimen/icon_size_compact" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonFavorite"
                style="@style/Widget.MyMusicPlayer.PlayerActionButton"
                android:layout_width="@dimen/size_player_action_button"
                android:layout_height="@dimen/size_player_action_button"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/action_favorite_add"
                app:icon="@drawable/ic_favorite_outline"
                app:iconSize="@dimen/icon_size_compact" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDownload"
                style="@style/Widget.MyMusicPlayer.PlayerActionButton"
                android:layout_width="@dimen/size_player_action_button"
                android:layout_height="@dimen/size_player_action_button"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/action_download"
                app:icon="@drawable/ic_download_simple"
                app:iconSize="@dimen/icon_size_compact" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBarProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:enabled="false"
            android:max="100"
            android:progress="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textCurrentTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/player_time_zero"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

            <TextView
                android:id="@+id/textTotalDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_time_zero"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPrevious"
                style="@style/Widget.MyMusicPlayer.PlayerTransportButton"
                android:layout_width="@dimen/size_player_transport_button"
                android:layout_height="@dimen/size_player_transport_button"
                android:contentDescription="@string/player_previous"
                app:icon="@drawable/ic_skip_previous"
                app:iconSize="@dimen/icon_size_compact" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonExpandedPlayPause"
                style="@style/Widget.MyMusicPlayer.PlayerPrimaryButton"
                android:layout_width="@dimen/size_player_primary_button"
                android:layout_height="@dimen/size_player_primary_button"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/play"
                app:icon="@drawable/ic_play_arrow"
                app:iconSize="@dimen/icon_size_emphasis" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonNext"
                style="@style/Widget.MyMusicPlayer.PlayerTransportButton"
                android:layout_width="@dimen/size_player_transport_button"
                android:layout_height="@dimen/size_player_transport_button"
                android:contentDescription="@string/player_next"
                app:icon="@drawable/ic_skip_next"
                app:iconSize="@dimen/icon_size_compact" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
